# grok_phase_solver

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt
docs/: FOR_REVIEWERS.md  GUI.md  RELEASE.md  RELEASE_NOTES_v0.2.1.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.5.0.md  USER_GUIDE.md  arxiv_draft.md  arxiv_skeleton.md  cowtan_phase_problem_notes.md  hybrid_ai_tests.md  roadmap.md
notebooks/: 01_math_and_baseline.md  02_patterson_and_triplets.md  03_uniqueness_parseval_friedel.md
scripts/: build_paper_pdf.py  calibrate_free_fom.py  plot_diagnostics.py  plot_paper_figures.py  run_ai_phaseed_benchmark.py  run_ai_phaseed_extended_benchmark.py  run_cod_hybrid_benchmark.py  run_diffmap_retune.py  run_ensemble_benchmark.py  run_experimental_scoreboard.py  run_failure_taxonomy.py  run_fair_phai_benchmark.py  run_frontier_benchmark.py  run_gui.py  run_hybrid_benchmark.py  run_partial_seed_benchmark.py  run_partial_seed_demo.py  run_phai_taxonomy.py  run_phase1_baseline.py  run_scoreboard.py  run_shelxd_h2h.py  run_shelxs_h2h.py  run_solvability_diagram.py  run_wilson_domain_gap.py  train_hard_p1_prior.py  train_phase_mlp.py  train_recycle_net.py  train_strong_prior.py
tests/: test_ai_phaseed.py  test_baseline.py  test_classical_methods.py  test_diffusion_phase.py  test_ensemble_and_frontier2.py  test_failure_taxonomy.py  test_free_fom.py  test_graph_phase_net.py  test_gui_backend.py  test_hard_p1_prior.py  test_io_physics.py  test_iterative_frontier.py  test_math_and_hybrids.py  test_partial_seed.py  test_seed_import.py  test_seed_import_predicted.py  test_seed_quality.py  test_shelxd_h2h.py  test_shelxs_runner.py  (+7 more)
(+176 files in other folders)
